CLDR-14290 ST forum change: Only TC members can initiate a Discuss (#1274)
-Implement the rule on both front and back ends

-Fix deprecation warnings for SurveyLog.logException

-Comments